[package]
name = "solana-vault-contract"
version = "0.1.0"
edition = "2021"
description = "A minimal Solana vault smart contract for SPL token deposits and withdrawals"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
borsh = "0.10"
thiserror = "1.0"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
spl-associated-token-account = "2.3"
tokio = { version = "1.0", features = ["macros"] }
hex = "0.4"

[features]
no-entrypoint = []